# Web_hw_13

./: README.md  pyproject.toml
Django/: .gitignore  README.md  pyproject.toml
Django/homework_10/: manage.py
Django/homework_10/homework_10/: settings.py  urls.py
Django/homework_10/quotes/: admin.py  forms.py  models.py  urls.py  views.py
Django/homework_10/quotes/migrations/: 0001_initial.py  0002_tag_user_alter_author_created_by_and_more.py  0003_alter_author_created_by_alter_quote_created_by.py  0004_rename_quote_quote_name.py
Django/homework_10/quotes/templates/quotes/: add_author.html  author.html  base.html  detail.html  index.html  quote.html  quotes_by_tag.html  tag_add.html
Django/homework_10/quotes/templatetags/: extract_tags.py
Django/homework_10/users/: apps.py  forms.py  models.py  signals.py  urls.py  views.py
Django/homework_10/users/migrations/: 0001_initial.py
Django/homework_10/users/templates/users/: login.html  password_reset.html  password_reset_done.html  profile.html  signup.html
Django/homework_10/utils/: load_data_for_postgres.py
postgres-data/global/: 1262  2671  pg_control  pg_internal.init
