[tool.poetry]
name = "django-hw-10"
version = "0.1.0"
package-mode = false
description = "Project on django"
authors = ["Vlad <vlad111121562@gmail.com>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
mongoengine = "^0.28.2"
pymongo = "^4.6.2"
psycopg2 = "^2.9.9"
django = "^5.0.3"
scrapy = "^2.11.1"
pillow = "^10.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
